--- a/index.html
+++ b/index.html
@@ -42,7 +42,12 @@
     <meta name="keywords" content="London Ontario" />
   </head>
   <body>
-    testing
+    <header>
+      <div class="logo">
+        <img src="/assets/images/logos/logo.png" alt="Company logo" />
+      </div>
+      <nav></nav>
+    </header>
     <script src="scripts/main.js"></script>
   </body>
 </html>
