--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
       <div class="logo">
         <img src="/assets/images/logos/logo.png" alt="Company logo" />
       </div>
-      <nav></nav>
+      <nav>
+        <ul>
+          <li><a href="#colors">Colors</a></li>
+          <li><a href="#layout">Layout</a></li>
+          <li><a href="#typography">Typography</a></li>
+          <li><a href="visualization">Data Visualization</a></li>
+          <li><a href="#components"></a></li>
+        </ul>
+      </nav>
     </header>
     <script src="scripts/main.js"></script>
   </body>
