--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
     <!--CSS-->
     <link rel="stylesheet" href="styles/main.css" />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <!--FAVICON-->
     <link
       rel="apple-touch-icon"
@@ -42,20 +55,43 @@
     <meta name="keywords" content="London Ontario" />
   </head>
   <body>
-    <header>
-      <div class="logo">
-        <img src="/assets/images/logos/logo.png" alt="Company logo" />
-      </div>
+    <header class="uti_padding">
       <nav>
-        <ul>
-          <li><a href="#colors">Colors</a></li>
-          <li><a href="#layout">Layout</a></li>
-          <li><a href="#typography">Typography</a></li>
-          <li><a href="visualization">Data Visualization</a></li>
-          <li><a href="#components"></a></li>
-        </ul>
+        <div class="logo">
+          <img src="/assets/images/logos/logo.png" alt="Company logo" />
+        </div>
+        <p class="page-title">Pattern Library</p>
       </nav>
+      <div class="hero-section">
+        <h1>Can Jet Pattern Library</h1>
+        <p>Pattern Library that will be used to build the Can Jet Website</p>
+      </div>
     </header>
+
+    <main class="wrapper">
+      <aside>here goes the navigation menu, sticky to the top</aside>
+      <section>
+        <div class="uti_padding">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
+          dignissimos corrupti molestiae harum iure beatae ad! Labore eius in
+          obcaecati. Sunt facilis veritatis, accusamus qui iure, nihil
+          exercitationem vero ipsam, necessitatibus ipsa magnam maiores!
+        </div>
+        <div class="uti_padding">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
+          dignissimos corrupti molestiae harum iure beatae ad! Labore eius in
+          obcaecati. Sunt facilis veritatis, accusamus qui iure, nihil
+          exercitationem vero ipsam, necessitatibus ipsa magnam maiores!
+        </div>
+        <div class="uti_padding">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
+          dignissimos corrupti molestiae harum iure beatae ad! Labore eius in
+          obcaecati. Sunt facilis veritatis, accusamus qui iure, nihil
+          exercitationem vero ipsam, necessitatibus ipsa magnam maiores!
+        </div>
+      </section>
+    </main>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
