Making the structure

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <meta name="keywords" content="London Ontario" />
   </head>
   <body>
-    <header class="uti_padding">
+    <header>
       <nav>
         <div class="logo">
           <img src="/assets/images/logos/logo.png" alt="Company logo" />
@@ -63,33 +63,55 @@
         <p class="page-title">Pattern Library</p>
       </nav>
       <div class="hero-section">
-        <h1>Can Jet Pattern Library</h1>
-        <p>Pattern Library that will be used to build the Can Jet Website</p>
+        <div class="hero-container-wrapp">
+          <h1>Can Jet Pattern Library</h1>
+          <p>Pattern Library that will be used to build the Can Jet Website.</p>
+        </div>
       </div>
     </header>
 
     <main class="wrapper">
-      <aside>here goes the navigation menu, sticky to the top</aside>
-      <section>
-        <div class="uti_padding">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
-          dignissimos corrupti molestiae harum iure beatae ad! Labore eius in
-          obcaecati. Sunt facilis veritatis, accusamus qui iure, nihil
-          exercitationem vero ipsam, necessitatibus ipsa magnam maiores!
+      <aside>
+        <div class="foundations">
+          <p class="aside-title">Foundations</p>
+          <ul>
+            <li>
+              <a href="#colors">Colors</a>
+            </li>
+            <li>
+              <a href="#colors">Layout</a>
+            </li>
+            <li>
+              <a href="#colors">Typography</a>
+            </li>
+            <li>
+              <a href="#colors">Data visualization</a>
+            </li>
+          </ul>
         </div>
-        <div class="uti_padding">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
-          dignissimos corrupti molestiae harum iure beatae ad! Labore eius in
-          obcaecati. Sunt facilis veritatis, accusamus qui iure, nihil
-          exercitationem vero ipsam, necessitatibus ipsa magnam maiores!
+        <hr />
+        <div class="components">
+          <p class="aside-title">Components</p>
+          <ul>
+            <li>
+              <a href="#colors">Buttons</a>
+            </li>
+            <li>
+              <a href="#colors">component 3</a>
+            </li>
+            <li>
+              <a href="#colors">component 4</a>
+            </li>
+            <li>
+              <a href="#colors">component 5</a>
+            </li>
+            <li>
+              <a href="#colors">component 6</a>
+            </li>
+          </ul>
         </div>
-        <div class="uti_padding">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
-          dignissimos corrupti molestiae harum iure beatae ad! Labore eius in
-          obcaecati. Sunt facilis veritatis, accusamus qui iure, nihil
-          exercitationem vero ipsam, necessitatibus ipsa magnam maiores!
-        </div>
-      </section>
+      </aside>
+      <section></section>
     </main>
 
     <script src="scripts/main.js"></script>
