--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
       <div class="hero-section">
         <div class="hero-container-wrapp">
           <h1>Can Jet Pattern Library</h1>
-          <p>Pattern Library that will be used to build the Can Jet Website.</p>
+          <p>
+            Pattern Library that will be used to build the
+            <b> <u>Can Jet </u> </b>Website.
+          </p>
         </div>
       </div>
     </header>
@@ -79,13 +82,13 @@
               <a href="#colors">Colors</a>
             </li>
             <li>
-              <a href="#colors">Layout</a>
+              <a href="#layout">Layout</a>
             </li>
             <li>
-              <a href="#colors">Typography</a>
+              <a href="#typography">Typography</a>
             </li>
             <li>
-              <a href="#colors">Data visualization</a>
+              <a href="#visualization">Data visualization</a>
             </li>
           </ul>
         </div>
@@ -113,6 +116,16 @@
       </aside>
       <section></section>
     </main>
+    <footer>
+      <p>Made with 💗 By: &nbsp;</p>
+      <div class="group">
+        <p>Luis Guaiquirian</p>
+        <p>Edgar Gomez</p>
+        <p>Jose Prado</p>
+        <p>Andres Sanchez</p>
+        <p>Ramses Verdayes</p>
+      </div>
+    </footer>
 
     <script src="scripts/main.js"></script>
   </body>
