adding graphs images

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
           <h1>Can Jet Pattern Library</h1>
           <p>
             Pattern Library that will be used to build the
-            <b> <u>Can Jet </u> </b>Website.
+            <b> Can Jet </b>Website.
           </p>
         </div>
       </div>
     </header>
 
-    <main class="wrapper">
+    <div class="wrapper">
       <aside>
         <div class="foundations">
           <p class="aside-title">Foundations</p>
@@ -114,8 +114,103 @@
           </ul>
         </div>
       </aside>
-      <section></section>
-    </main>
+      <main class="uti_padding">
+        <section class="data-visualization" id="visualization">
+          <h3>Data visualization</h3>
+          <div class="graph-container">
+            <h4>- Line Chart</h4>
+            <p>
+              Used to display data points connected by straight lines. It's
+              commonly used to show trends over time, making it ideal for
+              visualizing how variables change across a continuous interval
+              (such as days, months, or years).
+            </p>
+            <img src="/assets/images/line.png" alt="graph xx" />
+          </div>
+          <div class="graph-container">
+            <h4>- Line Chart Stacked</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
+              excepturi consequatur odit atque voluptatem voluptatum, eos error,
+              expedita deleniti, distinctio impedit placeat numquam!
+            </p>
+            <img src="/assets/images/line_stacked.png" alt="graph xx" />
+          </div>
+          <div class="graph-container">
+            <h4>- Bar Chart</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
+              excepturi consequatur odit atque voluptatem voluptatum, eos error,
+              expedita deleniti, distinctio impedit placeat numquam!
+            </p>
+            <img src="/assets/images/bar.png" alt="graph xx" />
+          </div>
+          <div class="graph-container">
+            <h4>- Bar Chart Stacked</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
+              excepturi consequatur odit atque voluptatem voluptatum, eos error,
+              expedita deleniti, distinctio impedit placeat numquam!
+            </p>
+            <img src="/assets/images/bar_stacked.png" alt="graph xx" />
+          </div>
+          <div class="graph-container">
+            <h4>- Bar Chart Horizontal</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
+              excepturi consequatur odit atque voluptatem voluptatum, eos error,
+              expedita deleniti, distinctio impedit placeat numquam!
+            </p>
+            <img src="/assets/images/bar_horizontal.png" alt="graph xx" />
+          </div>
+          <div class="graph-container">
+            <h4>- Area Chart</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
+              excepturi consequatur odit atque voluptatem voluptatum, eos error,
+              expedita deleniti, distinctio impedit placeat numquam!
+            </p>
+            <img src="/assets/images/area.png" alt="graph xx" />
+          </div>
+          <div class="graph-container">
+            <h4>- Area Chart Stacked</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
+              excepturi consequatur odit atque voluptatem voluptatum, eos error,
+              expedita deleniti, distinctio impedit placeat numquam!
+            </p>
+            <img src="/assets/images/area_stacked.png" alt="graph xx" />
+          </div>
+          <div class="graph-container">
+            <h4>- Scatter plot</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
+              excepturi consequatur odit atque voluptatem voluptatum, eos error,
+              expedita deleniti, distinctio impedit placeat numquam!
+            </p>
+            <img src="/assets/images/scatter.png" alt="graph xx" />
+          </div>
+          <div class="graph-container">
+            <h4>- Pie Chart</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
+              excepturi consequatur odit atque voluptatem voluptatum, eos error,
+              expedita deleniti, distinctio impedit placeat numquam!
+            </p>
+            <img src="/assets/images/pie_chart.png" alt="graph xx" />
+          </div>
+          <div class="graph-container">
+            <h4>Donut Chart</h4>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
+              excepturi consequatur odit atque voluptatem voluptatum, eos error,
+              expedita deleniti, distinctio impedit placeat numquam!
+            </p>
+            <img src="/assets/images/donut.png" alt="graph xx" />
+          </div>
+        </section>
+      </main>
+    </div>
     <footer>
       <p>Made with 💗 By: &nbsp;</p>
       <div class="group">
