adding right path to images

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </aside>
       <main class="uti_padding">
         <section class="data-visualization" id="visualization">
-          <h3>Data visualization</h3>
+          <h2>Data visualization</h2>
           <div class="graph-container">
             <h4>- Line Chart</h4>
             <p>
@@ -125,7 +125,7 @@
               visualizing how variables change across a continuous interval
               (such as days, months, or years).
             </p>
-            <img src="/assets/images/line.png" alt="graph xx" />
+            <img src="../assets/images/line.png" alt="graph xx" />
           </div>
           <div class="graph-container">
             <h4>- Line Chart Stacked</h4>
@@ -134,7 +134,7 @@
               excepturi consequatur odit atque voluptatem voluptatum, eos error,
               expedita deleniti, distinctio impedit placeat numquam!
             </p>
-            <img src="/assets/images/line_stacked.png" alt="graph xx" />
+            <img src="../assets/images/line_stacked.png" alt="graph xx" />
           </div>
           <div class="graph-container">
             <h4>- Bar Chart</h4>
