--- a/index.html
+++ b/index.html
@@ -130,83 +130,103 @@
           <div class="graph-container">
             <h4>- Line Chart Stacked</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
-              excepturi consequatur odit atque voluptatem voluptatum, eos error,
-              expedita deleniti, distinctio impedit placeat numquam!
+              Variation of a line chart where multiple data series are layered
+              on top of each other, rather than overlapping.
             </p>
             <img src="../assets/images/line_stacked.png" alt="graph xx" />
           </div>
           <div class="graph-container">
             <h4>- Bar Chart</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
-              excepturi consequatur odit atque voluptatem voluptatum, eos error,
-              expedita deleniti, distinctio impedit placeat numquam!
+              Uses rectangular bars to represent data values. The length or
+              height of each bar corresponds to the value it represents. Bar
+              charts are useful for comparing quantities across different
+              categories and are typically used when the data is categorical
+              (like types, groups, or classifications) rather than continuous.
             </p>
             <img src="/assets/images/bar.png" alt="graph xx" />
           </div>
           <div class="graph-container">
             <h4>- Bar Chart Stacked</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
-              excepturi consequatur odit atque voluptatem voluptatum, eos error,
-              expedita deleniti, distinctio impedit placeat numquam!
+              Variation of a bar chart where multiple data series are stacked on
+              top of each other in a single bar, rather than being placed
+              side-by-side
             </p>
             <img src="/assets/images/bar_stacked.png" alt="graph xx" />
           </div>
           <div class="graph-container">
             <h4>- Bar Chart Horizontal</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
-              excepturi consequatur odit atque voluptatem voluptatum, eos error,
-              expedita deleniti, distinctio impedit placeat numquam!
+              Bar chart where the bars extend horizontally from the y-axis
+              instead of vertically from the x-axis. Each bar's length
+              represents the value of the data it corresponds to, making it easy
+              to compare values across categories.
             </p>
             <img src="/assets/images/bar_horizontal.png" alt="graph xx" />
           </div>
           <div class="graph-container">
             <h4>- Area Chart</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
-              excepturi consequatur odit atque voluptatem voluptatum, eos error,
-              expedita deleniti, distinctio impedit placeat numquam!
+              Type of chart similar to a line chart but with the area below the
+              line filled with color or shading. This makes it useful for
+              visualizing cumulative values over time or across categories, as
+              well as seeing how quantities change.
             </p>
             <img src="/assets/images/area.png" alt="graph xx" />
           </div>
           <div class="graph-container">
             <h4>- Area Chart Stacked</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
-              excepturi consequatur odit atque voluptatem voluptatum, eos error,
-              expedita deleniti, distinctio impedit placeat numquam!
+              Variation of an area chart where multiple data series are stacked
+              on top of each other, with each series represented by a shaded
+              area. Instead of overlapping, each layer stacks on top of the
+              previous one, showing the cumulative total of all series and how
+              individual segments contribute to this total over time
             </p>
             <img src="/assets/images/area_stacked.png" alt="graph xx" />
           </div>
           <div class="graph-container">
-            <h4>- Scatter plot</h4>
+            <h4>- Scatter Plot</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
-              excepturi consequatur odit atque voluptatem voluptatum, eos error,
-              expedita deleniti, distinctio impedit placeat numquam!
+              Type of chart that displays data as individual points on a
+              two-dimensional grid. It’s used to visualize the relationship
+              between two variables, with one variable plotted along the x-axis
+              and the other on the y-axis. Each data point represents a unique
+              observation in the dataset.
             </p>
-            <img src="/assets/images/scatter.png" alt="graph xx" />
+            <img src="/assets/images/scatter.png" alt="graph xx" /><img
+              src="https://luisgcode.github.io/pattern_library_canJet/assets/images/scatter.png"
+              alt="graph xx"
+            />
           </div>
           <div class="graph-container">
             <h4>- Pie Chart</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
-              excepturi consequatur odit atque voluptatem voluptatum, eos error,
-              expedita deleniti, distinctio impedit placeat numquam!
+              Circular statistical graphic divided into slices to illustrate the
+              numerical proportions of a whole. Each slice of the pie represents
+              a category's contribution to the total, making it easy to
+              visualize relative sizes.
             </p>
-            <img src="/assets/images/pie_chart.png" alt="graph xx" />
+            <img
+              style="max-width: 400px"
+              src="/assets/images/pie_chart.png"
+              alt="graph xx"
+            />
           </div>
           <div class="graph-container">
             <h4>Donut Chart</h4>
             <p>
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
-              excepturi consequatur odit atque voluptatem voluptatum, eos error,
-              expedita deleniti, distinctio impedit placeat numquam!
+              Is a variation of a pie chart with a hole in the center,
+              resembling a donut. It is used to display data in a circular
+              format, showing the relative proportions of a whole, similar to a
+              pie chart.
             </p>
-            <img src="/assets/images/donut.png" alt="graph xx" />
+            <img
+              style="max-width: 400px"
+              src="/assets/images/donut.png"
+              alt="graph xx"
+            />
           </div>
         </section>
       </main>
