--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
     <header>
       <nav>
         <div class="logo">
-          <img src="/assets/images/logos/logo.png" alt="Company logo" />
+          <img
+            src="https://luisgcode.github.io/pattern_library_canJet/assets/images/logos/logo.png"
+            alt="Company logo"
+          />
         </div>
         <p class="page-title">Pattern Library</p>
       </nav>
@@ -125,7 +128,10 @@
               visualizing how variables change across a continuous interval
               (such as days, months, or years).
             </p>
-            <img src="../assets/images/line.png" alt="graph xx" />
+            <img
+              src="https://luisgcode.github.io/pattern_library_canJet/assets/images/line.png"
+              alt="graph xx"
+            />
           </div>
           <div class="graph-container">
             <h4>- Line Chart Stacked</h4>
@@ -133,7 +139,10 @@
               Variation of a line chart where multiple data series are layered
               on top of each other, rather than overlapping.
             </p>
-            <img src="../assets/images/line_stacked.png" alt="graph xx" />
+            <img
+              src="https://luisgcode.github.io/pattern_library_canJet/assets/images/line_stacked.png"
+              alt="graph xx"
+            />
           </div>
           <div class="graph-container">
             <h4>- Bar Chart</h4>
@@ -144,7 +153,10 @@
               categories and are typically used when the data is categorical
               (like types, groups, or classifications) rather than continuous.
             </p>
-            <img src="/assets/images/bar.png" alt="graph xx" />
+            <img
+              src="https://luisgcode.github.io/pattern_library_canJet/assets/images/bar.png"
+              alt="graph xx"
+            />
           </div>
           <div class="graph-container">
             <h4>- Bar Chart Stacked</h4>
@@ -153,7 +165,10 @@
               top of each other in a single bar, rather than being placed
               side-by-side
             </p>
-            <img src="/assets/images/bar_stacked.png" alt="graph xx" />
+            <img
+              src="https://luisgcode.github.io/pattern_library_canJet/assets/images/bar_stacked.png"
+              alt="graph xx"
+            />
           </div>
           <div class="graph-container">
             <h4>- Bar Chart Horizontal</h4>
@@ -163,7 +178,10 @@
               represents the value of the data it corresponds to, making it easy
               to compare values across categories.
             </p>
-            <img src="/assets/images/bar_horizontal.png" alt="graph xx" />
+            <img
+              src="https://luisgcode.github.io/pattern_library_canJet/assets/images/bar_horizontal.png"
+              alt="graph xx"
+            />
           </div>
           <div class="graph-container">
             <h4>- Area Chart</h4>
@@ -173,7 +191,10 @@
               visualizing cumulative values over time or across categories, as
               well as seeing how quantities change.
             </p>
-            <img src="/assets/images/area.png" alt="graph xx" />
+            <img
+              src="https://luisgcode.github.io/pattern_library_canJet/assets/images/area.png"
+              alt="graph xx"
+            />
           </div>
           <div class="graph-container">
             <h4>- Area Chart Stacked</h4>
@@ -184,7 +205,10 @@
               previous one, showing the cumulative total of all series and how
               individual segments contribute to this total over time
             </p>
-            <img src="/assets/images/area_stacked.png" alt="graph xx" />
+            <img
+              src="https://luisgcode.github.io/pattern_library_canJet/assets/images/area_stacked.png"
+              alt="graph xx"
+            />
           </div>
           <div class="graph-container">
             <h4>- Scatter Plot</h4>
@@ -195,7 +219,7 @@
               and the other on the y-axis. Each data point represents a unique
               observation in the dataset.
             </p>
-            <img src="/assets/images/scatter.png" alt="graph xx" /><img
+            <img alt="graph xx" /><img
               src="https://luisgcode.github.io/pattern_library_canJet/assets/images/scatter.png"
               alt="graph xx"
             />
@@ -210,7 +234,7 @@
             </p>
             <img
               style="max-width: 400px"
-              src="/assets/images/pie_chart.png"
+              src="https://luisgcode.github.io/pattern_library_canJet/assets/images/pie_chart.png"
               alt="graph xx"
             />
           </div>
@@ -224,7 +248,7 @@
             </p>
             <img
               style="max-width: 400px"
-              src="/assets/images/donut.png"
+              src="https://luisgcode.github.io/pattern_library_canJet/assets/images/donut.png"
               alt="graph xx"
             />
           </div>
