--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <meta
       name="description"
-      content="Luis Guaiquirian is a student web programmer, based in London Ontario, Canada."
+      content="Can Jet Company, based in London Ontario, Canada."
     />
 
     <meta name="keywords" content="London Ontario" />
