working on colors

--- a/index.html
+++ b/index.html
@@ -131,19 +131,55 @@
               </div>
               <div class="box">
                 <div class="color brand-light"></div>
-                <p>Brand color lighter</p>
+                <p>Brand lighter</p>
               </div>
               <div class="box">
                 <div class="color brand-dark"></div>
-                <p>Brand color darker</p>
+                <p>Brand darker</p>
               </div>
             </div>
           </div>
           <div class="colors-container">
             <h4>Functional colors</h4>
+            <div class="colors-row">
+              <div class="box">
+                <div class="color success"></div>
+                <p>Success Message</p>
+              </div>
+              <div class="box">
+                <div class="color warning"></div>
+                <p>Warning Message</p>
+              </div>
+              <div class="box">
+                <div class="color info"></div>
+                <p>Info Message</p>
+              </div>
+              <div class="box">
+                <div class="color error"></div>
+                <p>Error Message</p>
+              </div>
+            </div>
           </div>
           <div class="colors-container">
             <h4>Accent Colors</h4>
+            <div class="colors-row">
+              <div class="box">
+                <div class="color"></div>
+                <p>Success Message</p>
+              </div>
+              <div class="box">
+                <div class="color"></div>
+                <p>Warning Message</p>
+              </div>
+              <div class="box">
+                <div class="color"></div>
+                <p>Info Message</p>
+              </div>
+              <div class="box">
+                <div class="color"></div>
+                <p>Error Message</p>
+              </div>
+            </div>
           </div>
           <div class="colors-container">
             <h4>Neutral Colors</h4>
