Inserting colors code

--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@
 
             <div class="colors-row">
               <div class="box">
-                <div class="color brand"></div>
-                <p>Brand color</p>
+                <div class="color brand">#ed1c24</div>
+                <p>Red (Pigment)</p>
               </div>
               <div class="box">
-                <div class="color brand-light"></div>
-                <p>Brand lighter</p>
+                <div class="color brand-light">#ff4d52</div>
+                <p>Orange-Red (Crayola)</p>
               </div>
               <div class="box">
-                <div class="color brand-dark"></div>
-                <p>Brand darker</p>
+                <div class="color brand-dark">#a31418</div>
+                <p>Blood (Animal)</p>
               </div>
             </div>
           </div>
@@ -144,19 +144,19 @@
             <div class="colors-row">
               <div class="box">
                 <div class="color success"></div>
-                <p>Success Message</p>
+                <p>Apple</p>
               </div>
               <div class="box">
                 <div class="color warning"></div>
-                <p>Warning Message</p>
+                <p>Maximum Yellow Red</p>
               </div>
               <div class="box">
                 <div class="color info"></div>
-                <p>Info Message</p>
+                <p>Sea Serpent</p>
               </div>
               <div class="box">
                 <div class="color error"></div>
-                <p>Error Message</p>
+                <p>Jelly Bean</p>
               </div>
             </div>
           </div>
@@ -164,25 +164,39 @@
             <h4>Accent Colors</h4>
             <div class="colors-row">
               <div class="box">
-                <div class="color"></div>
-                <p>Success Message</p>
+                <div class="color acce-primary"></div>
+                <p>Bluebonnet</p>
               </div>
               <div class="box">
-                <div class="color"></div>
-                <p>Warning Message</p>
+                <div class="color acce-secondary"></div>
+                <p>Neon Green</p>
               </div>
               <div class="box">
-                <div class="color"></div>
-                <p>Info Message</p>
+                <div class="color acce-tertiary"></div>
+                <p>Screamin' Green</p>
               </div>
               <div class="box">
-                <div class="color"></div>
-                <p>Error Message</p>
+                <div class="color acce-quaternary"></div>
+                <p>Ultramarine Blue</p>
               </div>
             </div>
           </div>
           <div class="colors-container">
             <h4>Neutral Colors</h4>
+            <div class="colors-row">
+              <div class="box">
+                <div class="color neu-dark"></div>
+                <p>Dark Gunmetal</p>
+              </div>
+              <div class="box">
+                <div class="color neu-medium"></div>
+                <p>Gunmetal</p>
+              </div>
+              <div class="box">
+                <div class="color neu-light"></div>
+                <p>Quick Silver</p>
+              </div>
+            </div>
           </div>
         </section>
         <section id="layout" class="layout section_padding">
