--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       </div>
       <div class="hero-illustration">
         <img
-          src="/assets/images/undraw_color_palette_re_dwy7.svg"
+          src="https://luisgcode.github.io/pattern_library_canJet/assets/images/illustration.svg"
           alt=" illustration"
         />
       </div>
