final hero block

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <div class="hero section_format">
       <div class="hero-content">
-        <h1>Design System</h1>
+        <h1>Design System.</h1>
         <p>
           All the style guidelines that will be used to build the
           <b> Can Jet </b>Website.
