Starting Typography content

--- a/index.html
+++ b/index.html
@@ -194,6 +194,11 @@
     </section>
     <section id="typography" class="typography-section section_format">
       <h2 class="section_title">Typography</h2>
+      <div class="typo-block">
+        <h4>Intro</h4>
+        <h4>Type Scale</h4>
+        <h4>Paragraphs</h4>
+      </div>
     </section>
     <section id="visualization" class="data-visualization section_format">
       <h2 class="section_title">Data visualization</h2>
