Starting typography section

--- a/index.html
+++ b/index.html
@@ -194,9 +194,51 @@
     </section>
     <section id="typography" class="typography-section section_format">
       <h2 class="section_title">Typography</h2>
-      <div class="typo-block">
+
+      <div class="block intro">
         <h4>Intro</h4>
+        <p class="fake-allura">This is Allura. Our brand Typeface.</p>
+        <p>
+          We selected Allura as our brand typeface because it captures an
+          elegant, approachable style that resonates with our brand's identity.
+          Its flowing, handwritten aesthetic conveys a sense of warmth and
+          sophistication, making it ideal for creating a personal connection
+          with our audience
+        </p>
+        <br />
+        <p>
+          Allura's readability, even in smaller sizes, ensures it remains
+          accessible across various applications, from digital interfaces to
+          print.
+        </p>
+        <br />
+        <br />
+        <p class="fake-monserrat">Monserrat is our supporting font.</p>
+        <p>
+          Montserrat serves as our primary support font, selected for its
+          exceptional flexibility and clean, modern aesthetic. Its simplicity
+          enhances readability across various screen sizes, making it an ideal
+          choice for both headings and body text. The font’s versatility allows
+          it to seamlessly complement other design elements, ensuring a cohesive
+          and accessible visual experience.
+        </p>
+        <br />
+        <br />
+        <p class="fake-open">Open Sans for regular text.</p>
+        <br />
+        <p>
+          Open Sans is our chosen text font, thoughtfully selected to enhance
+          readability and comprehension for our users. Its clean, open
+          letterforms and balanced spacing make paragraphs easy to read,
+          providing a smooth, accessible reading experience across all devices.
+          This clarity in design helps ensure that users can effortlessly
+          understand and engage with content.
+        </p>
+      </div>
+      <div class="block Type-scale">
         <h4>Type Scale</h4>
+      </div>
+      <div class="block paragraphs">
         <h4>Paragraphs</h4>
       </div>
     </section>
