Line chart done

--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
           variables change across a continuous interval (such as days, months,
           or years).
         </p>
+        <h5>Passengers data by Month.</h5>
         <svg
           id="line-chart"
           viewBox="0 0 750 400"
