adding bar chart

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
     <section id="visualization" class="data-visualization section_format">
       <h2 class="section_title">Data visualization</h2>
 
-      <!-- Line chart -->
+      <!--------------------------  Line chart -->
       <div class="graph-container">
         <h4>Line Chart</h4>
         <p>
@@ -265,16 +265,20 @@
         ></svg>
         <div class="tooltip" id="tooltip"></div>
       </div>
+
+      <!-------------------------- Line chart Stacked -->
       <div class="graph-container">
         <h4>Line Chart Stacked</h4>
         <p>
           Variation of a line chart where multiple data series are layered on
           top of each other, rather than overlapping.
         </p>
-        <img
-          src="https://luisgcode.github.io/pattern_library_canJet/assets/images/line_stacked.png"
-          alt="graph xx"
-        />
+        <h5>Reveneu and Expenses by month.</h5>
+        <svg
+          id="line-chart-stacked"
+          viewBox="0 0 750 400"
+          preserveAspectRatio="xMinYMin meet"
+        ></svg>
       </div>
       <div class="graph-container">
         <h4>Bar Chart</h4>
@@ -285,10 +289,12 @@
           typically used when the data is categorical (like types, groups, or
           classifications) rather than continuous.
         </p>
-        <img
-          src="https://luisgcode.github.io/pattern_library_canJet/assets/images/bar.png"
-          alt="graph xx"
-        />
+        <h5>Most popular destinations</h5>
+        <svg
+          id="bar-chart"
+          viewBox="0 0 750 400"
+          preserveAspectRatio="xMinYMin meet"
+        ></svg>
       </div>
       <div class="graph-container">
         <h4>Bar Chart Stacked</h4>
