Bar chart inserted

--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
           preserveAspectRatio="xMinYMin meet"
         ></svg>
       </div>
+      <!-------------------------- Bar chart  -->
       <div class="graph-container">
         <h4>Bar Chart</h4>
         <p>
@@ -296,16 +297,20 @@
           preserveAspectRatio="xMinYMin meet"
         ></svg>
       </div>
+
+      <!-------------------------- Bar Chart stacked -->
       <div class="graph-container">
         <h4>Bar Chart Stacked</h4>
         <p>
           Variation of a bar chart where multiple data series are stacked on top
           of each other in a single bar, rather than being placed side-by-side
         </p>
-        <img
-          src="https://luisgcode.github.io/pattern_library_canJet/assets/images/bar_stacked.png"
-          alt="graph xx"
-        />
+        <h5>Revenue by Class</h5>
+        <svg
+          id="bar-chart-stacked"
+          viewBox="0 0 750 400"
+          preserveAspectRatio="xMinYMin meet"
+        ></svg>
       </div>
       <div class="graph-container">
         <h4>Bar Chart Horizontal</h4>
@@ -315,10 +320,6 @@
           of the data it corresponds to, making it easy to compare values across
           categories.
         </p>
-        <img
-          src="https://luisgcode.github.io/pattern_library_canJet/assets/images/bar_horizontal.png"
-          alt="graph xx"
-        />
       </div>
       <div class="graph-container">
         <h4>Area Chart</h4>
